--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = kcodecs
-url = https://download.kde.org/stable/frameworks/5.67/kcodecs-5.67.0.tar.xz
+url = https://download.kde.org/stable/frameworks/5.68/kcodecs-5.68.0.tar.xz
 archives = 
 giturl = https://anongit.kde.org/kcodecs.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
