--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = kcodecs
 url = https://download.kde.org/stable/frameworks/5.71/kcodecs-5.71.0.tar.xz
 archives = 
-giturl = https://anongit.kde.org/kcodecs.git
+giturl = https://invent.kde.org/frameworks/kcodecs.git
 domain = 
 alias = 
 
